--- a/style.css
+++ b/style.css
@@ -225,8 +225,8 @@ body {
 
 .history {
     background: #333333;
-    /*width: 1920px;
-    height: 757px;*/
+    /*width: 1920px;*/
+    height: 757px;
 }
 
 .history-title {
