--- a/style.css
+++ b/style.css
@@ -352,3 +352,36 @@ body {
     /*margin: -283px 1px 1px 0px;*/
     padding-left: 30px;
 }
+
+.projects {
+    width: 1920px;
+    height: 715px;
+    background-color: #333333;
+}
+
+.projects-title {
+    color: #fff;
+    font-family: 'Open Sans Condensed', sans-serif;
+    font-weight: 300;
+    font-size: 48px;
+    line-height: 65px;
+    text-align: center;
+    letter-spacing: 0.1em;
+    text-transform: uppercase;
+
+    padding-bottom: 100px;
+}
+
+.projects-title span {
+    color: #D1A954;
+}
+
+.projects-sliders {
+    display: inline-flex;
+    margin-left: 40px;
+}
+
+.sliders-image {
+    width: 442px;
+    height: 550px;
+}
