--- a/style.css
+++ b/style.css
@@ -192,7 +192,7 @@ body {
 
 .header-social-network {
     position: relative;
-    border-right: 1px solid #FFFFFF;
+    border-right: 1px solid #333333;
     padding-right: 10px;
     height: 50px;
 }
@@ -354,7 +354,6 @@ body {
 }
 
 .projects {
-    width: 1920px;
     height: 715px;
     background-color: #333333;
 }
